--- a/client/style/clientbase.css
+++ b/client/style/clientbase.css
@@ -1,14 +1,23 @@
 body {
 	margin: 0px;
 	overflow: hidden;
+	text-align: center;
+	background: black;
+}
+
+#viewport-container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 849px;
 }
 
 #viewport {
-	position: absolute;
 	left: 0px;
-	width: 100%;
-	bottom: 20%;
+	width: 849px;
+	height: 507px;
 	background: black;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 #debug-log {
@@ -18,6 +27,8 @@ body {
 	width: 100%;
 	bottom: 0;
 	font-family: monospace;
+	text-align: left;
+	background: white;
 }
 
 #debug-log p {
